--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url = jdbc:postgresql://localhost:5432/cell
+spring.datasource.username = cell
+spring.datasource.password=cell
+spring.datasource.hikari.maximumPoolSize=10
